--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^6.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
