--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.7.0",
+    "joi-phone-number": "^5.1.1",
     "mongoose": "^6.8.1"
   },
   "devDependencies": {
